--- a/WebApplication1/Views/Shared/_Layout.cshtml
+++ b/WebApplication1/Views/Shared/_Layout.cshtml
@@ -8,6 +8,9 @@
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
     <link href="~/css/all.min.css" rel="stylesheet" />
+    <link href="~/Content/bootstrap.min.css" rel="stylesheet" />
+    <script src="~/Scripts/jquery-3.4.1.min.js"></script>
+    @*<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCKe_Q5PpmeEoz2ROzCUuWqmbMwQgRQbNw&callback=initMap"></script>*@
 </head>
 <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
