--- a/WebApplication1/Views/Shared/_Layout.cshtml
+++ b/WebApplication1/Views/Shared/_Layout.cshtml
@@ -24,12 +24,16 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    @if (AccountController.AccountName.Length > 0)
+                    @if (Session["Username"]!=null)
                     {
-                        <li><a href="/Main/CreateOrder">Hello @AccountController.AccountName</a></li>
+                        <li><a href="/Main/CreateOrder">Hello @Session["Username"]</a></li>
+                        <li><a href="/Account/Logout">Đăng xuất</a></li>
                     }
-                    <li>@Html.ActionLink("Đăng nhập", "Login", "Account")</li>
-                    <li>@Html.ActionLink("Đăng kí", "Register", "Account")</li>
+                    else
+                    {
+                        <li><a href="/Account/Login">Đăng nhập</a></li>
+                    }
+                    <li><a href="/Account/Register">Đăng ký</a></li>
                 </ul>
             </div>
         </div>
