--- a/WebApplication1/Views/Account/Login.cshtml
+++ b/WebApplication1/Views/Account/Login.cshtml
@@ -2,6 +2,7 @@
 @{
     ViewBag.Title = "Login";
     Layout = "~/Views/_LayoutPage1.cshtml";
+    //Layout = "~/Views/Shared/_Layout.cshtml";
 }
 @using WebApplication1.Controllers
 <div class="main">
