--- a/WebApplication1/Views/_LayoutPage1.cshtml
+++ b/WebApplication1/Views/_LayoutPage1.cshtml
@@ -3,6 +3,7 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
+    <link href="~/Content/bootstrap.min.css" rel="stylesheet" />
     <link href="~/css/style.css" rel="stylesheet" />
     <title>@ViewBag.Title</title>
 </head>
