--- a/WebApplication1/css/style.css
+++ b/WebApplication1/css/style.css
@@ -85,7 +85,7 @@ html {
 
 input[type=submit] {
     outline: none;
-    background-color: #1dbfaf;
+    background-color: #D9534f;
     margin-top: 12px;
     padding: 12px 16px;
     font-weight: 600;
@@ -98,7 +98,7 @@ input[type=submit] {
 }
 
 .input[type=submit]:hover {
-    background-color: #1ac7b6;
+    opacity: 0.8;
 }
 
 .spacer {
